--- a/.github/workflows/bindings-linux-gnu.yml
+++ b/.github/workflows/bindings-linux-gnu.yml
@@ -78,8 +78,8 @@ jobs:
       - name: 🔨 Compile
         shell: bash
         run: |
-          export CC="zig;cc ${{ matrix.platform.target }}"
-          export CXX="zig;c++ ${{ matrix.platform.target }}"
+          export CC="zig:cc ${{ matrix.platform.target }}"
+          export CXX="zig:c++ ${{ matrix.platform.target }}"
           cd saucer
           mkdir build
           cd build
