Try this flags env var

--- a/.github/workflows/bindings-linux-gnu.yml
+++ b/.github/workflows/bindings-linux-gnu.yml
@@ -78,8 +78,10 @@ jobs:
       - name: 🔨 Compile
         shell: bash
         run: |
-          export CC="zig cc"
-          export CXX="zig c++"
+          export CC="zig"
+          export CXX="zig"
+          export CC_FLAGS="cc"
+          export CXX_FLAGS="c++"
           cd saucer
           mkdir build
           cd build
