Reduce test surface.

--- a/.github/workflows/bindings-gnu_linux-qt5.yml
+++ b/.github/workflows/bindings-gnu_linux-qt5.yml
@@ -32,18 +32,18 @@ jobs:
           #     qemuArch: "linux/386",
           #     dockerArch: SAME_AS_QEMU,
           #   }
-          - {
-              #
-              arch: "aarch64",
-              qemuArch: "linux/arm64/v8",
-              dockerArch: SAME_AS_QEMU,
-            }
-          - {
-              # el in LLVM, le in qemu/docker.
-              arch: "mips64el",
-              qemuArch: "linux/mips64le",
-              dockerArch: SAME_AS_QEMU,
-            }
+          # - {
+          #     #
+          #     arch: "aarch64",
+          #     qemuArch: "linux/arm64/v8",
+          #     dockerArch: SAME_AS_QEMU,
+          #   }
+          # - {
+          #     # el in LLVM, le in qemu/docker.
+          #     arch: "mips64el",
+          #     qemuArch: "linux/mips64le",
+          #     dockerArch: SAME_AS_QEMU,
+          #   }
 
     runs-on: ubuntu-latest
     name: "GNU_Linux-Qt5-${{ matrix.platform.arch }}-${{ matrix.build-type }}"
