Make this faster?

--- a/.github/actions/setup-glibc/action.yml
+++ b/.github/actions/setup-glibc/action.yml
@@ -28,4 +28,4 @@ runs:
           cd glibc-saucer/build
           ../configure --prefix=/opt/glibc-saucer --disable-werror
           make -j$(nproc)
-          make install
+          make install -j$(nproc)
