--- a/.github/workflows/bindings-gnu_linux-qt6.yml
+++ b/.github/workflows/bindings-gnu_linux-qt6.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         build-type:
           - Release
-          # - Debug
+          - Debug
         platform:
           # Check these for architecture compatibility:
           # https://packages.debian.org/search?searchon=names&keywords=qt6-webengine-dev
@@ -93,4 +93,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: "GNU_Linux-Qt6-${{ matrix.platform.arch }}-${{ matrix.build-type }}"
-          path: "saucer/build/bindings/libsaucer-bindings.so"
+          path: ${{ matrix.build-type == 'Release' && 'saucer/build/bindings/libsaucer-bindings.so' || 'saucer/build/bindings/**' }}
