--- a/.github/workflows/bindings-windows.yml
+++ b/.github/workflows/bindings-windows.yml
@@ -11,7 +11,7 @@ jobs:
       matrix:
         build-type:
           - Release
-          # - Debug
+          - Debug
         platform:
           # - { arch: x86, nativeArch: x86 }
           - { arch: x86_64, nativeArch: x64 }
@@ -45,4 +45,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: "Windows-WebView2-${{ matrix.platform.arch }}-${{ matrix.build-type }}"
-          path: "saucer/build/bindings/${{ matrix.build-type }}/saucer-bindings.dll"
+          path: ${{ matrix.build-type == 'Release' && 'saucer/build/bindings/${{ matrix.build-type }}/saucer-bindings.dll' || 'saucer/build/bindings/${{ matrix.build-type }}/**' }}
