Actually, don't be picky. Upload everything.

--- a/.github/workflows/bindings-gnu_linux-qt6.yml
+++ b/.github/workflows/bindings-gnu_linux-qt6.yml
@@ -93,4 +93,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: "GNU_Linux-Qt6-${{ matrix.platform.arch }}-${{ matrix.build-type }}"
-          path: ${{ matrix.build-type == 'Release' && 'saucer/build/bindings/libsaucer-bindings.so' || 'saucer/build/bindings/**' }}
+          path: "saucer/build/bindings/**"
