--- a/.github/workflows/bindings-windows.yml
+++ b/.github/workflows/bindings-windows.yml
@@ -45,4 +45,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: "Windows-WebView2-${{ matrix.platform.arch }}-${{ matrix.build-type }}"
-          path: ${{ matrix.build-type == 'Release' && 'saucer/build/bindings/${{ matrix.build-type }}/saucer-bindings.dll' || 'saucer/build/bindings/${{ matrix.build-type }}/**' }}
+          path: "saucer/build/bindings/${{ matrix.build-type }}/**"
