--- a/.github/workflows/bindings-gnu_linux-qt6.yml
+++ b/.github/workflows/bindings-gnu_linux-qt6.yml
@@ -51,7 +51,7 @@ jobs:
         with:
           repository: saucer/saucer
           path: saucer
-          ref: c-bindings # Temporary.
+          ref: very-experimental # Temporary.
 
       - name: 👨‍💻 Setup container
         uses: ./.github/actions/setup-container
