--- a/.github/workflows/EXPERIMENTAL-bindings-gnu_linux-qt5.yml
+++ b/.github/workflows/EXPERIMENTAL-bindings-gnu_linux-qt5.yml
@@ -81,7 +81,7 @@ jobs:
             mkdir build
             cd build
             cmake .. -Dsaucer_bindings=ON -Dsaucer_backend=Qt5
-            cmake --build . --config Release
+            cmake --build . --config ${{ matrix.build-type }}
 
       - name: 📦 Upload Artifact
         uses: actions/upload-artifact@v4
