--- a/.github/workflows/bindings-windows.yml
+++ b/.github/workflows/bindings-windows.yml
@@ -25,21 +25,19 @@ jobs:
       - name: 📥 Checkout actions code
         uses: actions/checkout@v4
 
-      - name: 🛸 Checkout Saucer code
+      - name: 🛸 Checkout Saucer bindings code
         uses: actions/checkout@v4
         with:
-          repository: saucer/saucer
+          repository: saucer/bindings
           path: saucer
-          ref: very-experimental # Temporary.
+          ref: main
 
       - name: 🔨 Compile
         shell: cmd
         run: |
           cd saucer
-          mkdir build 
-          cd build
-          cmake .. -Dsaucer_bindings=ON -Dsaucer_msvc_hack=ON -Dsaucer_backend=WebView2
-          cmake --build . --config ${{ matrix.build-type }}
+          cmake -B build -Dsaucer_msvc_hack=ON -Dsaucer_backend=WebView2
+          cmake --build build --config ${{ matrix.build-type }}
 
       - name: 📦 Upload Artifact
         uses: actions/upload-artifact@v4
