--- a/.github/workflows/EXPERIMENTAL-bindings-gnu_linux-qt5.yml
+++ b/.github/workflows/EXPERIMENTAL-bindings-gnu_linux-qt5.yml
@@ -85,4 +85,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: "GNU_Linux-Qt5-${{ matrix.platform.arch }}-${{ matrix.build-type }}"
-          path: "saucer/build/bindings/**"
+          path: "saucer/build/**"
