--- a/.github/workflows/bindings-gnu_linux-gtk4.yml
+++ b/.github/workflows/bindings-gnu_linux-gtk4.yml
@@ -2,13 +2,13 @@ on:
   push:
   pull_request:
 
-name: ⚠️ Build EXPERIMENTAL C Bindings (GNU/Linux + Qt6)
+name: ⛓️ Build C Bindings (GNU/Linux + WebKitGtk4)
 
 env:
   ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true # Shut up. https://github.blog/changelog/2023-06-13-github-actions-all-actions-will-run-on-node16-instead-of-node12-by-default/
 
 jobs:
-  experimental-build-gnu_linux-qt6:
+  build-gnu_linux-webkitgtk:
     strategy:
       fail-fast: false
       matrix:
@@ -17,24 +17,32 @@ jobs:
           - Debug
         platform:
           # Check these for architecture compatibility:
-          # https://packages.debian.org/search?searchon=names&keywords=qt6-webengine-dev
-          # https://hub.docker.com/_/debian/tags?page=&page_size=&ordering=&name=sid-slim
+          # https://packages.debian.org/search?searchon=names&keywords=libgtk-4-dev
+          # https://hub.docker.com/_/gcc/tags?page=&page_size=&ordering=&name=bookworm
           # https://github.com/tonistiigi/binfmt?tab=readme-ov-file#build-test-image
-          # - {
-          #     # Not working at the moment, TODO
-          #     arch: "x86",
-          #     qemuArch: "linux/386",
-          #     dockerArch: SAME_AS_QEMU,
-          #   }
           - {
-              #
+              arch: "x86_64",
+              qemuArch: "linux/amd64",
+              dockerArch: SAME_AS_QEMU,
+            }
+          - {
               arch: "aarch64",
-              qemuArch: "linux/arm64/v8",
+              qemuArch: "linux/arm64",
+              dockerArch: SAME_AS_QEMU,
+            }
+          - {
+              arch: "arm",
+              qemuArch: "linux/arm/v5",
+              dockerArch: SAME_AS_QEMU,
+            }
+          - {
+              arch: "ppc64le",
+              qemuArch: "linux/ppc64le",
               dockerArch: SAME_AS_QEMU,
             }
 
     runs-on: ubuntu-latest
-    name: "EXPERIMENTAL-GNU_Linux-Qt6-${{ matrix.platform.arch }}-${{ matrix.build-type }}"
+    name: "GNU_Linux-WebKitGtk-${{ matrix.platform.arch }}-${{ matrix.build-type }}"
 
     steps:
       - name: 📥 Checkout actions code
@@ -52,37 +60,35 @@ jobs:
         with:
           qemuArch: ${{ matrix.platform.qemuArch }}
           dockerArch: ${{ matrix.platform.dockerArch }}
-          image: "debian:sid-slim"
+          image: "gcc:14.2.0-bookworm"
 
       - name: 📋 Install dependencies
         uses: ./.github/actions/run-in-container
         with:
           command: |
             apt update
-            apt install -y build-essential git gcc-14 cmake xvfb
+            apt install -y build-essential git cmake xvfb
 
-      - name: 📋 Install Qt6 dependencies
+      - name: 📋 Install WebKitGtk dependencies
         uses: ./.github/actions/run-in-container
         with:
           command: |
-            apt install -y qt6-base-dev qt6-tools-dev qt6-declarative-dev qt6-webchannel-dev qt6-webengine-dev qt6-svg-dev
+            apt install -y libgtk-4-dev libwebkitgtk-6.0-dev libadwaita-1-0
 
       - name: 🔨 Compile
         uses: ./.github/actions/run-in-container
         with:
           command: |
-            if [ "${{ matrix.platform.arch }}" == "armel" ]; then
-              export TARGET_ARCH="armv6+nofp"
-            elif [ "${{ matrix.platform.arch }}" == "armhf" ]; then
-              export TARGET_ARCH="armv6+fp"
+            if [ "${{ matrix.platform.arch }}" == "arm" ]; then
+              export TARGET_ARCH="armv5+nofp"
             fi
 
             cd saucer
-            cmake -B build -Dsaucer_backend=Qt6
+            cmake -B build -Dsaucer_backend=WebKitGtk
             cmake --build build --config ${{ matrix.build-type }}
 
       - name: 📦 Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: "GNU_Linux-Qt6-${{ matrix.platform.arch }}-${{ matrix.build-type }}"
+          name: "GNU_Linux-WebKitGtk-${{ matrix.platform.arch }}-${{ matrix.build-type }}"
           path: "saucer/build/**"
