--- a/.github/workflows/EXPERIMENTAL-bindings-gnu_linux-qt6.yml
+++ b/.github/workflows/EXPERIMENTAL-bindings-gnu_linux-qt6.yml
@@ -85,4 +85,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: "GNU_Linux-Qt6-${{ matrix.platform.arch }}-${{ matrix.build-type }}"
-          path: "saucer/build/**"
+          path: "saucer/build/libsaucer-bindings.so"
