--- a/.github/workflows/bindings-macos.yml
+++ b/.github/workflows/bindings-macos.yml
@@ -41,4 +41,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: "macOS-WebKit-${{ matrix.platform.arch }}-${{ matrix.build-type }}"
-          path: "saucer/build/**"
+          path: "saucer/build/libsaucer-bindings.dylib"
