--- a/.github/actions/upload-artifact/action.yml
+++ b/.github/actions/upload-artifact/action.yml
@@ -29,7 +29,7 @@ runs:
     - name: Create archive for release
       if: github.event_name == 'release' && github.event.action == 'created'
       shell: cmd
-      run: 7z a "${{ inputs.name }}.zip" "${{ inputs.path }}" -r
+      run: 7z a "${{ inputs.name }}.zip" "${{ github.workspace }}/${{ inputs.path }}" -r
 
     - name: Upload to release
       uses: svenstaro/upload-release-action@v2
