--- a/.github/workflows/bindings-macos.yml
+++ b/.github/workflows/bindings-macos.yml
@@ -1,8 +1,12 @@
 on:
   push:
+    branches:
+      - 'main'
   pull_request:
+  release: 
+    types: [created]
 
-name: ⛓️ macOS + WebKit
+name: ⛓️ macOS
 
 jobs:
   build-macos-arm:
