--- a/.github/workflows/bindings-macos.yml
+++ b/.github/workflows/bindings-macos.yml
@@ -15,7 +15,7 @@ jobs:
       matrix:
         build-type:
           - Release
-          - Debug
+          # - Debug
         platform: 
           - { arch: x86_64, os: [self-hosted, macOS, x64, macos14-intel] } # Self hosted runner, thanks Max!
           - { arch: aarch64, os: macos-14 }
