--- a/.github/workflows/bindings-windows.yml
+++ b/.github/workflows/bindings-windows.yml
@@ -1,9 +1,9 @@
 on:
   push:
     branches:
-      - 'main'
+      - "main"
   pull_request:
-  release: 
+  release:
     types: [created]
 
 name: ⛓️ Windows
@@ -14,7 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         build-type:
-          - Release
+          - MinSizeRel
           # - Debug
         platform:
           # - { arch: x86, nativeArch: x86 }
@@ -33,19 +33,20 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: saucer/bindings
-          path: saucer
+          path: bindings
           ref: main
 
       - name: 🔨 Compile
-        shell: cmd
-        run: |
-          cd saucer
-          cmake -B build -Dsaucer_msvc_hack=ON -Dsaucer_backend=WebView2
-          cmake --build build --config ${{ matrix.build-type }}
+        uses: ./.github/actions/compile
+        with:
+          backend: WebView2-Hack
+          platform: Windows
+          build-type: ${{ matrix.build-type }}
+          cmake-args: -Dsaucer_msvc_hack=ON -Dsaucer_serializer=Rflpp
 
       - name: 📦 Upload Artifact
         uses: ./.github/actions/upload-artifact
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           name: "Windows-WebView2-${{ matrix.platform.arch }}-${{ matrix.build-type }}"
-          path: "saucer/build/${{ matrix.build-type }}/saucer-bindings.dll"
+          path: "bindings/build/${{ matrix.build-type }}"
