--- a/.github/workflows/bindings-windows.yml
+++ b/.github/workflows/bindings-windows.yml
@@ -14,7 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         build-type:
-          - MinSizeRel
+          - Release
           # - Debug
         platform:
           # - { arch: x86, nativeArch: x86 }
